Add links to homepage

--- a/_src/index.html
+++ b/_src/index.html
@@ -3,8 +3,8 @@ layout: wire
 ---
             <nav class="center">
                 <ul>
-                    <li class="aquaburst">Blog</li>
-                    <li class="shedressedme">About</li>
-                    <li class="deeper">Social</li>
+                    <li class="aquaburst"><a href="{{ site.domain }}/blog/">Blog</a></li>
+                    <li class="shedressedme"><a href="{{ site.domain }}/about/">About</a></li>
+                    <li class="deeper"><a href="{{ site.domain }}/social/">Social</a></li>
                 </ul>
             </nav>
