styling for header-tag in sections

--- a/_src/about/index.html
+++ b/_src/about/index.html
@@ -1,7 +1,4 @@
 ---
-layout: wire
+layout: page
+title: About
 ---
-            <article>
-            <header><a href="{{ site.domain }}{{ page.url }}">About</a></header>
-                    {{ content }}
-            </article>
