--- a/_src/social/index.html
+++ b/_src/social/index.html
@@ -1,7 +1,4 @@
 ---
-layout: wire
+layout: page
+title: Social
 ---
-            <article>
-            <header><a href="{{ site.domain }}{{ post.url }}">Social</a></header>
-                    {{ content }}
-            </article>
