--- a/_src/index.html
+++ b/_src/index.html
@@ -8,3 +8,8 @@ layout: wire
                     <li class="deeper"><a href="{{ site.domain }}/social/">Social</a></li>
                 </ul>
             </nav>
+
+            <blockquote cite="http://xkcd.com/" id="xkcd-quote">
+                <p>My Friends -- We can make today Saturday.</p>
+                <p>We can make it Saturday <b>Forever</b>.</p>
+            </blockquote>
