--- a/_src/index.html
+++ b/_src/index.html
@@ -9,7 +9,7 @@ layout: wire
                 </ul>
             </nav>
 
-            <blockquote cite="http://xkcd.com/" id="xkcd-quote">
-                <p>My Friends -- We can make today Saturday.</p>
-                <p>We can make it Saturday <b>Forever</b>.</p>
-            </blockquote>
+            <blockquote cite="http://xkcd.com/" class="xkcd-quote"><div class="xkcd-quote">
+                <a href="http://xkcd.com/"><p>"My Friends -- We can make today Saturday.</p>
+                <p>We can make it Saturday <b>Forever</b>."</p></a>
+            </div></blockquote>
