--- a/_src/index.html
+++ b/_src/index.html
@@ -10,6 +10,6 @@ layout: wire
             </nav>
 
             <blockquote cite="http://xkcd.com/" class="xkcd-quote"><div class="xkcd-quote">
-                <a href="http://xkcd.com/"><p>"My Friends -- We can make today Saturday.</p>
+                <a href="http://xkcd.com/1073/" title="Of the two Garfields, you wouldn't think the cat would turn out to be the more compelling presidential speechwriter, but there you go."><p>"My Friends -- We can make today Saturday.</p>
                 <p>We can make it Saturday <b>Forever</b>."</p></a>
             </div></blockquote>
