Change link format

--- a/_src/index.html
+++ b/_src/index.html
@@ -3,9 +3,9 @@ layout: wire
 ---
             <nav class="center">
                 <ul>
-                    <li class="aquaburst"><a href="{{ site.domain }}/blog/">Blog</a></li>
-                    <li class="shedressedme"><a href="{{ site.domain }}/about/">About</a></li>
-                    <li class="deeper"><a href="{{ site.domain }}/social/">Social</a></li>
+                    <li class="aquaburst"><a href="/blog/">Blog</a></li>
+                    <li class="shedressedme"><a href="/about/">About</a></li>
+                    <li class="deeper"><a href="/social/">Social</a></li>
                 </ul>
             </nav>
 
