--- a/_src/index.html
+++ b/_src/index.html
@@ -1,12 +1,9 @@
 ---
 layout: wire
+nav: false
 ---
             <nav class="center">
-                <ul>
-                    <li class="aquaburst"><a href="/blog/">Blog</a></li>
-                    <li class="shedressedme"><a href="/about/">About</a></li>
-                    <li class="deeper"><a href="/social/">Social</a></li>
-                </ul>
+                {% include nav.html %}
             </nav>
 
             <blockquote cite="http://xkcd.com/" class="xkcd-quote"><div class="xkcd-quote">
