--- a/_src/about/index.html
+++ b/_src/about/index.html
@@ -2,3 +2,7 @@
 layout: page
 title: Über Mich
 ---
+
+Hey, ich bin Franz!
+
+Ich bin Student an der Freien Universität Berlin am Institut für Informatik. Dort bin ich seit Oktober 2011 und bin unter anderem ein Teil des Spline-Projekts. Ich arbeite im Moment auf allen verbreiteten Platformen (Zocke auf Windows, Arbeite auf Mac OS X, und im Spline sitz ich an Linux-Workstations.) 
