--- a/_src/about/index.html
+++ b/_src/about/index.html
@@ -6,3 +6,33 @@ title: Über Mich
 Hey, ich bin Franz!
 
 Ich bin Student an der Freien Universität Berlin am Institut für Informatik. Dort bin ich seit Oktober 2011 und bin unter anderem ein Teil des Spline-Projekts. Ich arbeite im Moment auf allen verbreiteten Platformen (Zocke auf Windows, Arbeite auf Mac OS X, und im Spline sitz ich an Linux-Workstations.) 
+
+<br />
+<h1>Projekte</h1>
+<table><tbody>
+    <tr height="110px">
+        <td width="110px"><div class="cutoutlogo" style="background-image:url('/images/logobig.png')"></div></td>
+        <td class="text"><h3 class="nopadding">lc3dyr.de</h3></td>
+    </tr>
+    <tr height="110px">
+        <td width="110px"><div class="cutoutlogo" style="background-image:url(/images/vimlogo.png)"></div</td>
+        <td class="text"><h3 class="nopadding">bulletvim</h3></td>
+    </tr>
+</tbody></table>
+
+
+<h1>Soziales</h1>
+<table><tbody>
+    <tr height="110px">
+        <td class="text"><h3 class="nopadding">Twitter</h3></td>
+        <td width="110px"><a href="http://twitter.com/laerador"><div class="cutoutlogo" style="background-image:url(https://twitter.com/images/resources/twitter-bird-white-on-blue.png)"></div></a></td>
+    </tr>
+    <tr height="110px">
+        <td class="text"><h3 class="nopadding">Github</h3></td>
+        <td width="110px"><div class="cutoutlogo" style="background-image:url(/images/octocat.png)"></div></td>
+    </tr>
+    <tr height="110px">
+        <td class="text"><h3 class="nopadding">Spline</h3></td>
+        <td width="110px"><div class="cutoutlogo" style="background-image:url(http://marian.spline.de/res/logo/png/spline-logo-min-white.png)"></div></td>
+    </tr>
+</tbody></table>
