Some work on About-Page

--- a/_src/about/index.html
+++ b/_src/about/index.html
@@ -11,28 +11,49 @@ Ich bin Student an der Freien Universität Berlin am Institut für Informatik. D
 <h1>Projekte</h1>
 <table><tbody>
     <tr height="110px">
-        <td width="110px"><div class="cutoutlogo" style="background-image:url('/images/logobig.png')"></div></td>
-        <td class="text"><h3 class="nopadding">lc3dyr.de</h3></td>
+        <td width="110px"><a href="https://github.com/laerador/lc3dyr.de"><div class="cutoutlogo" style="background-image:url('/images/logobig.png')"></div></a></td>
+        <td class="text"><h3 class="nopadding"<a href="https://github.com/laerador/lc3dyr.de">lc3dyr.de</a></h3>
+        Der Sourcecode zu dieser Webseite.</td>
     </tr>
     <tr height="110px">
-        <td width="110px"><div class="cutoutlogo" style="background-image:url(/images/vimlogo.png)"></div</td>
-        <td class="text"><h3 class="nopadding">bulletvim</h3></td>
+        <td width="110px"><a href="https://github.com/laerador/personal-.VIM"><div class="cutoutlogo" style="background-image:url(/images/vimlogo.png)"></div></a></td>
+            <td class="text"><h3 class="nopadding"><a href="https://github.com/laerador/personal-.VIM">personal-.Vim</a></h3>
+                Eine etwas ältere Version meiner <code>.vimrc</code>. Neueres folgt.</td>
     </tr>
 </tbody></table>
-
 
 <h1>Soziales</h1>
 <table><tbody>
     <tr height="110px">
-        <td class="text"><h3 class="nopadding">Twitter</h3></td>
+        <td class="text" style="text-align:right;"><h3 class="nopadding"><a href="http://twitter.com/laerador">Twitter</a></h3></td>
         <td width="110px"><a href="http://twitter.com/laerador"><div class="cutoutlogo" style="background-image:url(https://twitter.com/images/resources/twitter-bird-white-on-blue.png)"></div></a></td>
     </tr>
     <tr height="110px">
-        <td class="text"><h3 class="nopadding">Github</h3></td>
-        <td width="110px"><div class="cutoutlogo" style="background-image:url(/images/octocat.png)"></div></td>
+        <td class="text" style="text-align:right;"><h3 class="nopadding"><a href="http://github.com/laerador">Github</a></h3></td>
+        <td width="110px"><a href="http://github.com/laerador"><div class="cutoutlogo" style="background-image:url(/images/octocat.png)"></div></a></td>
     </tr>
     <tr height="110px">
-        <td class="text"><h3 class="nopadding">Spline</h3></td>
-        <td width="110px"><div class="cutoutlogo" style="background-image:url(http://marian.spline.de/res/logo/png/spline-logo-min-white.png)"></div></td>
+        <td class="text" style="text-align:right;"><h3 class="nopadding"><a href="http://spline.de">Spline</a></h3></td>
+        <td width="110px"><a href="http://spline.de"><div class="cutoutlogo" style="background-image:url(http://marian.spline.de/res/logo/png/spline-logo-min-white.png)"></div></a></td>
     </tr>
 </tbody></table>
+
+<br />
+<h1>Impressum</h1>
+<p>The content of the articles (as found in <a href="/blog/">Blog</a>) is licend under the Creative Commons <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" title="Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License">BY-NC-SA
+3.0</a>. The Code of the Templates and everything not directly specified ist
+licensed under MIT.</p>
+
+<p>Special thanks to the following Projects, from which I used Code/Ideas:
+<ul>
+    <li>The <em>Colortheme</em> of the website is hardly inspired by:
+    <a href="http://www.colourlovers.com/palette/482774/dream_magnet">Dream Magnet by
+    lagunabeach</a>
+licenced <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" title="Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License">CC-BY-NC-SA</a></li>
+<li>The <em>Flowerimages</em> are created by <a href="http://dragonartz.net">DragonArt</a> and
+released under <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" title="Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License">CC-BY-NC-SA</a>, and have been recolored by myself.</li>
+<li>Jekyll Plugins from
+  <a href="http://recursive-design.com/projects/jekyll-plugins/">Recursive-Design</a>,
+  which I use. They are Licenced under the <a href="https://github.com/recurser/jekyll-plugins/blob/master/LICENSE">MIT
+      License</a>. </p></li>
+</ul>
