Smaller change to positioning of homepage

--- a/_src/index.html
+++ b/_src/index.html
@@ -7,6 +7,6 @@ nav: false
             </nav>
 
             <blockquote cite="http://xkcd.com/" class="xkcd"><div class="xkcd">
-                <a href="http://xkcd.com/1073/" target="_blank" title="Of the two Garfields, you wouldn't think the cat would turn out to be the more compelling presidential speechwriter, but there you go.">"My Friends -- We can make today Saturday.
+                    <a href="http://xkcd.com/1073/" target="_blank" title="Of the two Garfields, you wouldn't think the cat would turn out to be the more compelling presidential speechwriter, but there you go.">"My Friends -- We can make today Saturday.</br>
                 We can make it Saturday <b>Forever</b>."</a>
             </div></blockquote>
