--- a/_src/comment_received.html
+++ b/_src/comment_received.html
@@ -3,12 +3,10 @@
 	<head> 
         <meta charset="utf-8" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<?php if (isset($_POST['post_url']))
-		{
-			$post_url = $_POST['post_url'];
+		<?php 
 			$return_delay = 4; //Number of seconds to linger on this page before redirecting back to the static site
 			echo '<meta http-equiv="refresh" content="'.$return_delay.';url='.$post_url.'" />';
-		} ?>
+	    ?>
 		<title>Comment Received</title> 
 
         <link href="/assets/css/font.css" type="text/css" rel="stylesheet" /> 
